v16.2/classes/GC.Spread.Pivot.PivotTableStyle.md
# Class: PivotTableStyle

[Spread](../modules/GC.Spread.md).[Pivot](../modules/GC.Spread.Pivot.md).PivotTableStyle

## Table of contents

### Constructors

- [constructor](GC.Spread.Pivot.PivotTableStyle.md#constructor)

### Properties

- [backColor](GC.Spread.Pivot.PivotTableStyle.md#backcolor)
- [borderBottom](GC.Spread.Pivot.PivotTableStyle.md#borderbottom)
- [borderHorizontal](GC.Spread.Pivot.PivotTableStyle.md#borderhorizontal)
- [borderLeft](GC.Spread.Pivot.PivotTableStyle.md#borderleft)
- [borderRight](GC.Spread.Pivot.PivotTableStyle.md#borderright)
- [borderTop](GC.Spread.Pivot.PivotTableStyle.md#bordertop)
- [borderVertical](GC.Spread.Pivot.PivotTableStyle.md#bordervertical)
- [font](GC.Spread.Pivot.PivotTableStyle.md#font)
- [foreColor](GC.Spread.Pivot.PivotTableStyle.md#forecolor)
- [textDecoration](GC.Spread.Pivot.PivotTableStyle.md#textdecoration)

## Constructors

### <a id="constructor" name="constructor"></a> constructor

• **new PivotTableStyle**(`backColor?`, `foreColor?`, `font?`, `borderLeft?`, `borderTop?`, `borderRight?`, `borderBottom?`, `borderHorizontal?`, `borderVertical?`, `textDecoration?`)

数据透视表样式

#### Parameters

| Name | Type |
| :------ | :------ |
| `backColor?` | `string` |
| `foreColor?` | `string` |
| `font?` | `string` |
| `borderLeft?` | [`LineBorder`](GC.Spread.Sheets.LineBorder.md) |
| `borderTop?` | [`LineBorder`](GC.Spread.Sheets.LineBorder.md) |
| `borderRight?` | [`LineBorder`](GC.Spread.Sheets.LineBorder.md) |
| `borderBottom?` | [`LineBorder`](GC.Spread.Sheets.LineBorder.md) |
| `borderHorizontal?` | [`LineBorder`](GC.Spread.Sheets.LineBorder.md) |
| `borderVertical?` | [`LineBorder`](GC.Spread.Sheets.LineBorder.md) |
| `textDecoration?` | [`TextDecorationType`](../enums/GC.Spread.Sheets.TextDecorationType.md) |

## Properties

### <a id="backcolor" name="backcolor"></a> backColor

• **backColor**: `string`

背景色

___

### <a id="borderbottom" name="borderbottom"></a> borderBottom

• **borderBottom**: [`LineBorder`](GC.Spread.Sheets.LineBorder.md)

底部边框

___

### <a id="borderhorizontal" name="borderhorizontal"></a> borderHorizontal

• **borderHorizontal**: [`LineBorder`](GC.Spread.Sheets.LineBorder.md)

水平边框

___

### <a id="borderleft" name="borderleft"></a> borderLeft

• **borderLeft**: [`LineBorder`](GC.Spread.Sheets.LineBorder.md)

左边框

___

### <a id="borderright" name="borderright"></a> borderRight

• **borderRight**: [`LineBorder`](GC.Spread.Sheets.LineBorder.md)

右边框

___

### <a id="bordertop" name="bordertop"></a> borderTop

• **borderTop**: [`LineBorder`](GC.Spread.Sheets.LineBorder.md)

上边框

___

### <a id="bordervertical" name="bordervertical"></a> borderVertical

• **borderVertical**: [`LineBorder`](GC.Spread.Sheets.LineBorder.md)

垂直边框

___

### <a id="font" name="font"></a> font

• **font**: `string`

字体

___

### <a id="forecolor" name="forecolor"></a> foreColor

• **foreColor**: `string`

前景色

___

### <a id="textdecoration" name="textdecoration"></a> textDecoration

• **textDecoration**: [`TextDecorationType`](../enums/GC.Spread.Sheets.TextDecorationType.md)

文本装饰
